# c-the-sign

./: .dockerignore  .env.example  .gitignore  CHAT_PROMPTS.md  Dockerfile  PROMPTS.md  QUALITY_REPORT.md  README.md  SUBMISSION_CHECKLIST.md  docker-compose.yml  guide.md
backend/: README.md  eval_cases.json  http_examples.http  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: assess.py  chat.py  health.py
backend/app/core/: config.py  dependencies.py
backend/app/domain/: patient.py  rag.py
backend/app/schemas/: assess.py  chat.py  common.py
backend/app/services/: chat_agent.py  decision_agent.py  embedding_client.py  llm_client.py  patient_lookup_tool.py  provider_errors.py  rule_engine.py  safety_scoring.py  safety_validator.py  vector_store.py  vertex_auth.py
backend/app/storage/: patient_repository.py  session_memory.py
backend/data/: guideline_rules.yml
backend/scripts/: ingest_ng12.py  run_eval.py
backend/tests/integration/: test_assess_api.py  test_chat_api.py  test_chat_history_api.py  test_provider_error_api.py
backend/tests/unit/: test_decision_agent.py  test_patient_repository.py  test_provider_clients.py  test_safety_scoring.py  test_safety_validator.py  test_session_memory.py  test_vector_store.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: ChatAssistant.tsx  RiskAssessor.tsx
